# vibecheck

./: .gitignore  .mailmap  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: publish.yml
generate-peer-review/: README.md  generate.py  peer_review_guidance.yaml
generate-security-review/: README.md  generate.py  security_guidance.yaml
generate-servicemap/: README.md  SKILL.md  validate_servicemap.py
mcp-review/: README.md  SKILL.md  analyze_mcp.py  fetch_source.py  mcp_risk_guidance.yaml
mcp-review/tests/: test_analyze_mcp.py  test_fetch_source.py
mcp-review/tests/corpus/: README.md  REVIEW.md  capture_all.sh  capture_tools.py  run_analysis.sh
mcp-review/tests/corpus/known-bad/: config.json  expected_verdicts.json
mcp-review/tests/corpus/known-bad/analysis/: calc-poisoned.json  cryptoprice-installer.json  datatool-remote.json  mcp-remote-untrusted.json  postmark-mcp.json  weather-exfil.json
mcp-review/tests/corpus/known-bad/source/: mcp-remote_auth.js  postmark-mcp_sendEmail.js
mcp-review/tests/corpus/known-bad/tools/: calc-poisoned.json  postmark-mcp.json  weather-exfil.json
mcp-review/tests/corpus/top/: config.json  expected_verdicts.json
mcp-review/tests/corpus/top/analysis/: brave-search-official.json  brave-search.json  context7.json  everything.json  exa.json  fetch.json  filesystem.json  firecrawl.json  git.json  github.json  google-maps.json  memory.json  notion.json  playwright.json  postgres.json  puppeteer.json  sentry.json  sequential-thinking.json  slack.json  stripe.json  tavily.json  time.json
mcp-review/tests/corpus/top/tools/: brave-search-official.json  brave-search.json  context7.json  everything.json  exa.json  fetch.json  filesystem.json  firecrawl.json  git.json  github.json  google-maps.json  memory.json  notion.json  playwright.json  postgres.json  puppeteer.json  sentry.json  sequential-thinking.json  slack.json  stripe.json  tavily.json  time.json
mcp-review/tests/corpus/top100/: SURVEY.md  survey_build.py
mcp-review/tests/fixtures/: sample_config.json  sample_tools.json  settings.json
references/: schema.md
scrutineer/: __init__.py  cli.py  installer.py  paths.py  servicemap.py
scrutineer-setup/: SKILL.md
